--- a/content/2.components/1.avanda-cli.md
+++ b/content/2.components/1.avanda-cli.md
@@ -12,7 +12,7 @@ We're in love with [TypeScript](https://www.typescriptlang.org/), but above all 
 
 Please make sure that [Node.js](https://nodejs.org) (version >= 16) is installed on your operating system.
 
-### Setup
+### CLI setup
 
 Setting up a new project is quite simple with the [Avanda CLI](/components/cli/overview).
 ::CodeGroup{toggleText="npm,yarn"}
