Avanda CLI completed

--- a/content/2.components/2.avanda-orm/1.getting-started.md
+++ b/content/2.components/2.avanda-orm/1.getting-started.md
@@ -1,6 +1,6 @@
 
 
-# Avanda CLI
+# Overview
 
 Get started with **core fundamentals** of Avandajs. To get familiar with the essential building blocks of an Avanda application, we'll breakdown the installation to each Avanda Components
 
@@ -14,7 +14,7 @@ Please make sure that [Node.js](https://nodejs.org) (version >= 16) is installed
 
 ### CLI setup
 
-Setting up a new project is quite simple with the [Avanda CLI](/components/cli/overview).
+Setting up a new project is quite simple with the [Avanda CLI](/components/avanda-cli/overview).
 ::CodeGroup{toggleText="npm,yarn"}
 #npm
 
@@ -32,7 +32,7 @@ $ yarn global add @avanda/cli
 
 ### Create a new Project
 
-With [Avanda CLI](/components/cli/overview) installed, you can create a new Avanda project with the following commands in your OS terminal:
+With [Avanda CLI](/components/avanda-cli/overview) installed, you can create a new Avanda project with the following commands in your OS terminal:
 
 ```bash
 $ avanda init <project-name>
