Minor refactor fixing not found on refresh

--- a/content/2.components/1.avanda-cli/1.overview.md
+++ b/content/2.components/1.avanda-cli/1.overview.md
@@ -1,6 +1,6 @@
 
 
-# Overview
+# CLI Overview
 
 The [Avanda CLI](https://github.com/avandajs/cli) is the cli module of avandajs, it's required to run any avandajs project. It helps in different ways, some includes, creating a new project, serving your project while developing, creaating new folder files, interacting with your database and building your project for production.  
 
