Getting started jump start done

--- a/content/2.components/1.avanda-cli/1.overview.md
+++ b/content/2.components/1.avanda-cli/1.overview.md
@@ -19,7 +19,7 @@ When avanda cli is [installed globally](/getting-started/quick-start#setup), you
 
 
 ```bash
-$ avanda -h
+$ yarn avanda -h
 ```
 > Check [guides](/components/avanda-cli/guide#commands) for more info on avanda CLI commands
 
@@ -44,13 +44,13 @@ $ npm install
 Once installed, you can execute CLI commands from your command line with the prefix `avanda`. To see the available `avanda` commands check [Here](/components/avanda-cli/guide##commands) or by entering the following:
 
 ```bash
-$ avanda -h
+$ yarn avanda -h
 ```
 
 Get help on an individual command. Substitute any command like `create`, `app`, [etc](/components/avanda-cli/guide#command-overview) where you see `app` in the example below to get detailed help on that command:
 
 ```bash
-$ avanda app -h
+$ yarn avanda app -h
 ```
 
 ### Command actions
