--- a/content/2.components/1.avanda-cli/2.guide.md
+++ b/content/2.components/1.avanda-cli/2.guide.md
@@ -1,4 +1,4 @@
-#CLI Guide
+# CLI Guide
 Here are some guides for running commands with Avanda CLI:
 
 ### Commands
@@ -9,10 +9,10 @@ Here are the list of some basic commands
 
 | Command    | Description                                                                                           | Usage |
 | ---------- | ----------------------------------------------------------------------------------------------------- | ------- |
-| `create`   | Automatically generates assets, asset types includes: `controller`, `middleware`, `seeder`..etc   | `$ avanda create <asset-type> <option> <name>`|
-| `app` |App migration command, executes actions, includes: `install`, `seed` ...etc| `$ avanda app <action> <option> <file-name>`|
-| `init` | Create a new avanda project| `$ avanda init <project-name>`|
-| `serve` | Serves your project for development mode with compiling on changes made | `$ avanda serve`|
+| `create`   | Automatically generates assets, asset types includes: `controller`, `middleware`, `seeder`..etc   | `$yarn avanda create <asset-type> <option> <name>`|
+| `app` |App migration command, executes actions, includes: `install`, `seed` ...etc| `$ yarn avanda app <action> <option> <file-name>`|
+| `init` | Create a new avanda project| `$ yarn avanda init <project-name>`|
+| `serve` | Serves your project for development mode with compiling on changes made | `$ yarn avanda serve`|
 
 
 <!-- ### CLI commands  -->
@@ -30,9 +30,9 @@ Here are some of the options available:
 
 | Options    | Description                                                                                           | Usage |
 | ---------- | ----------------------------------------------------------------------------------------------------- | ------- |
-| `-t`   | Refers to table or [Model](/guide/model) name | `$ avanda app install -t <model-name>`|
-| `-n` | Refers to asset name | `$ avanda create Model -n <model-name>`|
-| `-a` | Mainly used with `create` command to create all necessary assets | `$ avanda create -a <asset-name>`|
+| `-t`   | Refers to table or [Model](/guide/model) name | `$ yarn avanda app install -t <model-name>`|
+| `-n` | Refers to asset name | `$ yarn avanda create Model -n <model-name>`|
+| `-a` | Mainly used with `create` command to create all necessary assets | `$ yarn avanda create -a <asset-name>`|
 
 
 #### Actions
@@ -42,8 +42,8 @@ Here are some of the actions available:
 
 | Actions    | Description                                                                                           | Usage |
 | ---------- | ----------------------------------------------------------------------------------------------------- | ------- |
-| `install`   | This is used to install your [Model](/guide/model) Schema to a table, accepts option of table name `-t` and name of your model | `$ avanda app install -t <model-name>`|
-| `seed` | Seeds or adds provided data to the Specified table, accepts option of table name `-t` and model name | `$ avanda app seed -t <model-name>`|
+| `install`   | This is used to install your [Model](/guide/model) Schema to a table, accepts option of table name `-t` and name of your model | `$ yarn avanda app install -t <model-name>`|
+| `seed` | Seeds or adds provided data to the Specified table, accepts option of table name `-t` and model name | `$ yarn avanda app seed -t <model-name>`|
 
 <!-- ### Command Syntax
 You can create files from your OS terminal with avanda boilerplate
