Added Imports to controller jumpstart

--- a/content/1.getting-started/2.jump-start.md
+++ b/content/1.getting-started/2.jump-start.md
@@ -180,8 +180,31 @@ This seeds the data in the array to the table `BlogPost` in your database, we om
 Avanda uses functions to communicate with clients, Each Controller is connected to their respective tables in your database. In this section we use controller function to store a new BlogPost to your table
 
 ```ts [Controllers/BlogPost.ts]
-@Post() //accepts middleware 
-  async createPost(res: Response, req: Request) {
+import {Controller, Request, Response, Get, Post} from "@avanda/http";
+import BlogPostModel from "../models/BlogPost"
+
+export default class Blog extends Controller {
+    model?:  BlogPostModel
+    @Get()
+    async get(response: Response,request: Request, model?: Model): Promise<any> {
+        return (await this.model?.first())
+    }
+
+    @Get()
+    async getAll(response: Response,request: Request, model?: Model) {
+        return (await this.model?.all())
+    }
+
+    @Get()
+    async getAllByPage(response: Response,request: Request, model?: Model) {
+        let data = await this.model?.page(request.page,true)
+        response.totalPages = this.model.totalPages
+        response.currentPage = request.page
+        response.perPage = this.model.perPage;
+        return response.success('Data fetched',data)
+    }
+    @Post() //accepts middleware 
+    async createPost(res: Response, req: Request) {
     const { blogContent, tags, author, postTitle } = req.data;
     const post = await this.model?.create({
       user_id: author.id,
@@ -195,6 +218,9 @@ Avanda uses functions to communicate with clients, Each Controller is connected 
     }
     return res.success("blogPost created successfully", post); // returns post created
   }
+
+}
+
 ```
 In the above function we use the `@Post()` to specify the kind of request we are defining a function for, it can also accept multiple middleware as arguments [learn more](/guide/middleware), then created an asynchronous function `createPost` which accepts Response and Request as arguments. Then get all needed data from the `req.data` object which we use in the model `create` method to create post in the BlogPost table then return the post created.
 
