Minor refactor grammar

--- a/content/1.getting-started/2.jump-start.md
+++ b/content/1.getting-started/2.jump-start.md
@@ -6,7 +6,7 @@ Let's build a basic avanda app to help you get started on your next project
 Please check [quick-start](/getting-started/quick-start) before you continue
 
 ### Folders and files
-After creating your avanda project, avanda automatically generate a starter template for you to work with.
+After creating your avanda project, avanda automatically generates a starter template for you to work with.
 
 ### Configure your project
 There is a config folder in the list of folders generated in your starter template which includes `database.ts` and `server.ts` files
@@ -27,7 +27,7 @@ export default config
 ```
 
 #### Server Config
-`server.ts`file is available for you to configure your [server](/api/configs/server). Add your client domain to the CORS Whitelist to prevent requests from being blocked
+`server.ts`file is available for you to configure your [server](/api/configs/server). Add your client domain to the CORS Whitelist to prevent blocking of requests requests 
 
 ```ts
 const config: serverConfig =  {
@@ -42,7 +42,7 @@ export default config
 
 #### Environment configuration
 
-Environment details includes your `Database details`, `JWT details`
+Environment details include your `Database details`, `JWT details`
 ##### Database Details
 Connect your database, provide your details
 ```js
@@ -54,7 +54,7 @@ DB_PASSWORD=avanda_test // database password
 > Check [Environment Configuration](/guide/environment-configuration) for more
 
 ### Start building
-In this section we will work you through the process of building your app by building a blog post as an example
+In this section, we will work you through the process of building your app by building a blog post as an example
 #### Create your necessary assets
 
 ``` bash
@@ -110,12 +110,12 @@ export default class Blog extends Model{
     category?:string;
 }
 ```
-Above is some columns for a blog post, first column references the user model's `id` as a foreign key which is available in your starter template, `@Column` has different methods you can use depending on the datatype, you must provide the name of the column with a datatype which helps in enforcing datatypes while developing your app. 
+Above are some columns for a blog post, first column references the user model's `id` as a foreign key which is available in your starter template, `@Column` has different methods you can use depending on the datatype, you must provide the name of the column with a datatype which helps in enforcing datatypes while developing your app. 
 
 >Check [here](/guide/models/schema) for more information on Writing your schema
 
 #### Install your model
-On Every schema you write you have to create or install the schema to your database, you can do that with avanda cli command `app`
+On Every schema you write you have to create or install the schema to your database, you can do that with avanda CLI command `app`
 Install the two models created `User` and `BlogPost`
 ``` bash
 $ yarn avanda app install -t User
@@ -125,7 +125,7 @@ $ yarn avanda app install -t BlogPost
 > Note you have to install `User` model before the `BlogPost` because User model was referenced as a foreign key in the BlogPost model
 
 #### Seed your table
-You have created a `User` and `BlogPost` But the table is empty, you need to add data to your table, thats what we call seed and the `seeders` folder keeps all the files used for seeding data into your tables in your database.
+You have created a `User` and `BlogPost` But the table is empty, you need to add data to your table, that's what we call seed, and the `seeders` folder keeps all the files used for seeding data into your tables in your database.
 
 Seeding data into the `User` table, a boilerplate using [fakerjs](https://www.npmjs.com/package/@faker-js/faker) exists in the `seeders/User.ts` file
 
@@ -147,9 +147,9 @@ Then run the avanda CLI seed command on your terminal
 ```bash
 $ yarn avanda app seed -t User
 ```
-This inserts a user with a fake email, password and full_name to your table in your database, Check [API](/api/hash) for more on `Hash`
+This inserts a user with a fake email, password, and full_name to your table in your database, Check [API](/api/hash) for more on `Hash`
 
-Now seed your BlogPost, In your `seeders/BlogPost.ts` you can add data by using the `createBulk()` method created by avanda which accepts an array of objects containing the data to be seeded into the table
+Now seed your BlogPost, In your `seeders/BlogPost.ts` you can add data by using the `createBulk()` method created by avanda which accepts an array of objects containing the data you want to seed into the table
 
 ``` ts [seeders/BlogPost.ts]
 import {Seeder} from "@avanda/orm"
@@ -174,10 +174,10 @@ Then run the avanda CLI seed command on your terminal
 $ yarn avanda app seed -t BlogPost
 ```
 
-This seeds the data in the array to the table `BlogPost` in your database, we ommitted the `tags` and `category` columns because it was specified in the `BlogPost` [Schema](#write-your-schema) that they can have initial values of null.
+This seeds the data in the array to the table `BlogPost` in your database, we omitted the `tags` and `category` columns because it we specified in the `BlogPost` [Schema](#write-your-schema) that they can have initial values of null.
 
 #### Controller functions
-Avanda uses functions to communicate with clients, Each Controller is connected to their respective tables in your database. In this section we use controller function to store a new BlogPost to your table
+Avanda uses functions to communicate with clients, Each Controller is connected to their respective tables in your database. In this section, we use the controller function to store a new BlogPost to your table
 
 ```ts [Controllers/BlogPost.ts]
 import {Controller, Request, Response, Get, Post} from "@avanda/http";
@@ -222,10 +222,10 @@ export default class Blog extends Controller {
 }
 
 ```
-In the above function we use the `@Post()` to specify the kind of request we are defining a function for, it can also accept multiple middleware as arguments [learn more](/guide/middleware), then created an asynchronous function `createPost` which accepts Response and Request as arguments. Then get all needed data from the `req.data` object which we use in the model `create` method to create post in the BlogPost table then return the post created.
+In the above function, we use the `@Post()` to specify the kind of request we are defining a function for, it can also accept middleware as arguments [learn more](/guide/middleware), then created an asynchronous function `createPost` which accepts Response and Request as arguments. Then get all needed data from the `req.data` object which we use in the model `create` method to create post in the BlogPost table then return the post created.
 
 #### Calling your Controller functions
-You have created functions in your controllers, but how do we run the function? Thats where [Avanda Json Graph Api](https://github.com/avandajs/avandajs) comes into play, You can use Avanda Json Graph Api to call your controller functions from the client side, check [Avanda Json Graph Api](/api/avanda-JSGA/overview)
+You have created functions in your controllers, but how do we run the function? That is where [Avanda Json Graph Api](https://github.com/avandajs/avandajs) comes into play, You can use Avanda Json Graph API to call your controller functions from the client side, check [Avanda Json Graph Api](/api/avanda-JSGA/overview)
 
 ```js [vue]
 import Graph from "../libs/avanda.ts"
@@ -271,7 +271,7 @@ Now let's create a function to post data to the function `createPost` in the `co
             }
         }
 ```
-We defined function `createPostClient` to call the service `BlogPost/createPost` which calls the `createPost` in the `controller/BlogPost.ts`, then creates a new record in the blogPost table in your database
+We defined the function `createPostClient` to call the service `BlogPost/createPost` which calls the `createPost` in the `controller/BlogPost.ts`, then creates a new record in the blogPost table in your database
 
 > Check [Avanda Json Graph Api](/api/avanda-JSGA/overview) for more on using avanda from the client side
 
