Avanda ORM guide

--- a/content/1.getting-started/1.quick-start.md
+++ b/content/1.getting-started/1.quick-start.md
@@ -4,15 +4,15 @@
 
 Get started with **core fundamentals** of Avandajs. To get familiar with the essential building blocks of an Avanda application, we'll breakdown the installation to each Avanda Components
 
-### Language
+## Language
 
 We're in love with [TypeScript](https://www.typescriptlang.org/), but above all - we love [Node.js](https://nodejs.org/en/), utilizing [esno](https://www.npmjs.com/package/esno) to compile in ms. Avanda takes advantage of the latest typescript features and enables custom typing for your application which makes it less prone to errors.
 
-### Prerequisites
+## Prerequisites
 
 Please make sure that [Node.js](https://nodejs.org) (version >= 16) is installed on your operating system.
 
-### Setup
+## Setup
 
 Setting up a new project is quite simple with the [Avanda CLI](/components/cli/overview).
 
@@ -31,7 +31,7 @@ $ yarn global add @avanda/cli
 
 ::
 
-### Create a new Project
+## Create a new Project
 
 With [Avanda CLI](/components/cli/overview) installed, you can create a new Avanda project with the following commands in your OS terminal:
 
@@ -71,7 +71,7 @@ async function boot() {
 boot();
 ```
 
-### Running the application
+## Running the application
 
 When installation of your app is complete, you can run the following command to install [esno](https://www.npmjs.com/package/esno) for easy compilation of your project.
 ::CodeGroup{toggleText="npm,yarn"}
