--- a/content/1.getting-started/2.jump-start.md
+++ b/content/1.getting-started/2.jump-start.md
@@ -2,13 +2,13 @@
 
 Let's build a basic avanda app to help you get started on your next project
 
-### Prerequisites
+## Prerequisites
 Please check [quick-start](/getting-started/quick-start) before you continue
 
-### Folders and files
+## Folders and files
 After creating your avanda project, avanda automatically generates a starter template for you to work with.
 
-### Configure your project
+## Configure your project
 There is a config folder in the list of folders generated in your starter template which includes `database.ts` and `server.ts` files
 
 #### Database Config
@@ -45,7 +45,7 @@ export default config
 Environment details include your `Database details`, `JWT details`
 ##### Database Details
 Connect your database, provide your details
-```js
+```js [.env]
 DB_HOST=localhost //database host
 DB_USER=root  //database username
 DB_NAME=avanda_starter_test //database name
@@ -53,7 +53,7 @@ DB_PASSWORD=avanda_test // database password
 ```
 > Check [Environment Configuration](/guide/environment-configuration) for more
 
-### Start building
+## Start building
 In this section, we will work you through the process of building your app by building a blog post as an example
 #### Create your necessary assets
 
@@ -63,7 +63,7 @@ $ yarn avanda create -a BlogPost
 This creates all necessary assets for `BlogPost`, You should have a `controller/BlogPost.ts`, `models/BlogPost.ts`
 > Check [avanda CLI](/components/avanda-cli/guide) for more create options
 
-#### Write your Schema
+### Write your Schema
 With Avanda you can use SQL without writing SQL, In your `models/BlogPost` a boilerplate already exists:
 ```ts [model/BlogPost.ts]
 import {Column,Model} from "@avanda/orm";
@@ -114,7 +114,7 @@ Above are some columns for a blog post, first column references the user model's
 
 >Check [here](/guide/models/schema) for more information on Writing your schema
 
-#### Install your model
+### Install your model
 On Every schema you write you have to create or install the schema to your database, you can do that with avanda CLI command `app`
 Install the two models created `User` and `BlogPost`
 ``` bash
@@ -124,7 +124,7 @@ $ yarn avanda app install -t BlogPost
 ```
 > Note you have to install `User` model before the `BlogPost` because User model was referenced as a foreign key in the BlogPost model
 
-#### Seed your table
+### Seed your table
 You have created a `User` and `BlogPost` But the table is empty, you need to add data to your table, that's what we call seed, and the `seeders` folder keeps all the files used for seeding data into your tables in your database.
 
 Seeding data into the `User` table, a boilerplate using [fakerjs](https://www.npmjs.com/package/@faker-js/faker) exists in the `seeders/User.ts` file
@@ -176,7 +176,7 @@ $ yarn avanda app seed -t BlogPost
 
 This seeds the data in the array to the table `BlogPost` in your database, we omitted the `tags` and `category` columns because it we specified in the `BlogPost` [Schema](#write-your-schema) that they can have initial values of null.
 
-#### Controller functions
+### Controller functions
 Avanda uses functions to communicate with clients, Each Controller is connected to their respective tables in your database. In this section, we use the controller function to store a new BlogPost to your table
 
 ```ts [Controllers/BlogPost.ts]
