--- a/content/2.components/1.avanda-cli/2.guide.md
+++ b/content/2.components/1.avanda-cli/2.guide.md
@@ -1,7 +1,7 @@
 # CLI Guide
 Here are some guides for running commands with Avanda CLI:
 
-### Commands
+## Commands
 
 Here are the list of some basic commands 
 
@@ -18,13 +18,13 @@ Here are the list of some basic commands
 <!-- ### CLI commands  -->
 <!-- Cli options are list of options you can tag along with your command to give more intructions to the commands -->
 
-### Command Arguments
+###Command Arguments
 
 CLI commands accepts some arguments you can tag along to give more intructions to the commands
 
 Here are some of the command arguments available:
 
-#### Options
+### Options
 
 Here are some of the options available:
 
@@ -35,7 +35,7 @@ Here are some of the options available:
 | `-a` | Mainly used with `create` command to create all necessary assets | `$ yarn avanda create -a <asset-name>`|
 
 
-#### Actions
+### Actions
 These are mostly paired along the `app` command, they are mainly used to interact with your database
 
 Here are some of the actions available:
