--- a/content/2.components/2.avanda-orm/1.getting-started.md
+++ b/content/2.components/2.avanda-orm/1.getting-started.md
@@ -1,98 +1,173 @@
 
 
-# Overview
+# ORM Guide
 
-Get started with **core fundamentals** of Avandajs. To get familiar with the essential building blocks of an Avanda application, we'll breakdown the installation to each Avanda Components
+Avanda ORM is the building block of a [Model](/guide/model), It includes all the pieces you need to create a schema for your model.
 
-### Language
+## Define a column 
+To define a column in your model to install in your database, Each column accepts column datatype, column datatype options,  name of the column, and a semantic datatype of the column in your model.
+In every model created an `id` is generated as the first column of the model, which accepts a semantic datatype of `number`
 
-We're in love with [TypeScript](https://www.typescriptlang.org/), but above all - we love [Node.js](https://nodejs.org/en/), utilizing [esno](https://www.npmjs.com/package/esno) to compile in ms. Avanda takes advantage of the latest typescript features and enables custom typing for your application which makes it less prone to errors.
-
-### Prerequisites
-
-Please make sure that [Node.js](https://nodejs.org) (version >= 16) is installed on your operating system.
-
-### CLI setup
-
-Setting up a new project is quite simple with the [Avanda CLI](/components/avanda-cli/overview).
-::CodeGroup{toggleText="npm,yarn"}
-#npm
-
-```bash
-$ npm install @avanda/cli -g
-```
-
-#yarn
-
-```bash
-$ yarn global add @avanda/cli
-```
-
-::
-
-### Create a new Project
-
-With [Avanda CLI](/components/avanda-cli/overview) installed, you can create a new Avanda project with the following commands in your OS terminal:
-
-```bash
-$ avanda init <project-name>
-$ cd <project-name>
-$ npm install
-```
-
-> **Note:** To create a new project Avanda CLI must be installed.
-
-The `project-name` directory will be created, and boilerplate files will be installed, and a `app/` directory will be created and populated with several core files for you to get started with.
-
-Here's a brief overview of those core files:
-
-| Directories/file | Description                                                                                       |
-| ---------------- | ------------------------------------------------------------------------------------------------- |
-| app              | Core folders for you to work with includes: the controllers, middleware, models, seeders...       |
-| build            | This directory contains all [build](/guide/buid) files created when you build your avanda project |
-| configs          | This directory contains the files you need to configure your database and server                  |
-| .env             | This contains all your environment variables                                                      |
-
-The `avanda.ts` includes an async function, which will **boot** our application:
-
-```typescript [avanda.ts]
-import Avanda from "@avanda/cli";
-import Models from "./app/models/.boot";
-import Seeders from "./app/seeders/.boot";
-import Commands from "./app/commands/.boot";
-import { Connection } from "@avanda/app";
-import Config from "./configs/database";
-
-async function boot() {
-  return Avanda(Commands, Models, Seeders, await Connection(Config));
+```ts
+import User from '../models/User';
+import {Column,Model} from "@avanda/orm";
+export default class BlogPost extends Model{
+  id?: number;
+  @Column.text()
+  name_of_column?: string;
 }
+```
+## Column
 
-boot();
+`@Column`is use to define the data type of a column in a table, paired with the datatype method suitable for your use case
+
+### List of Columns Datatype
+
+These are the list of datatype available on Avanda ORM
+
+- #### Text
+This is use to store text or string to the table
+```ts
+@Column.text()
+name_of_column?: string;
 ```
 
-### Running the application
+- #### Integer
+This is use to store SQL `integer` datatype to the table
+```ts
+@Column.int()
+name_of_column?: number;
+```
 
-When installation of your app is complete, you can run the following command to install [esno](https://www.npmjs.com/package/esno) for easy compilation of your project.
-::CodeGroup{toggleText="npm,yarn"}
-#npm
+- #### Boolean
+This is use to store SQL `boolean` datatype in a table, and accepts default value of `true`| `false`
+```ts
+@Column.int()
+name_of_column?: boolean =  false;
+```
+
+- #### Decimal
+This is use to store SQl `decimal` datatype in a table, and accepts the [maxSize Option](#columnOptions) to define the floating point
+```ts
+@Column.decimal({
+    maxSize:[65,4]
+})
+name_of_column?: number;
+```
+
+- #### Enum
+This is use to store SQL `enum` datatype in a table, the limited values of the enum datatype can be used as a type declaration in the semantic datatype which may accept a default value 
+```ts
+@Column.enum(['value-1','value-2'])
+name_of_column?: 'value-1' | 'value-2' = 'value-2'
+```
+
+- #### Json
+This is used to store SQL `json` datatype in a table, semantic datatype for `json` is the type declaration of an object or array in typescript 
+
+```ts
+@Column.enum()
+name_of_column?: string
+```
+
+- #### Date
+This is used to store SQL date datatype in a table 
+
+```ts
+import Date from '@avanda/orm/dataTypes/Date';
+@Column.date()
+name_of_column?: Date;
+```
+
+- #### Point
+This is used to store Geographic point or location datatype in a table 
+
+```ts
+import {GeoPoint} from "@avanda/orm";
+@Column.point()
+name_of_column?: GeoPoint;
+```
+
+### Column Options
+Column options are arguments passed into the column  datatype to give constraints to the columns on your table
+
+Here are a list of columns options available :
+
+- #### nullable 
+The default value of any column is a `NOT NULL` value or a default value assigned to the column but in some cases where a column might be empty  `nullable` option must be set to `true` to avoid the `NOT NULL` constraint
+
+```ts
+@Column.text({
+  nullable: true
+})
+name_of_column?: string;
+```
+
+- #### references 
+With Avanda ORM linking of tables together is as easy as adding a column option `references` with a new instance of the model you are trying to reference
+In the following example the `User` model is referenced
+
+```ts
+import User from '../models/User';
+
+@Column.int({
+        references: new User()
+})
+name_of_column_id?: number;
+```
+
+- #### maxSize
+`maxSize` option gives the functionality of adding a maximum size of a `text`, `int`, `decimal` columns datatype
+
+It can be used in two ways, First one is using it in `text` or `int` datatype as shown below
+
+```ts
+@Column.text({
+    maxSize: 10 //maximum string length is 10
+})
+name_of_column_id?: string;
+
+```
+
+It can also be used to define the floating point of a `decimal` column datatype 
+
+```ts
+@Column.text({
+    maxSize: [65, 4] //maximum precision is 65 and maximum scale is 4
+})
+name_of_column_id?: string;
+```
+
+- #### index
+`index` option is used to define an index on a column in the model,
+It accepts an object with [type](#index-type) and [name](#index-name)
+
+```ts
+@Column.text({
+    index: {
+      type: "UNIQUE",
+      name: "unique_name"
+    }
+})
+name_of_column_id?: string;
+```
+
+  - #### index options
+  These are the list of options available for the index column option:
+
+  |Option | Description                                                                                       |
+  | ---------------- | ------------------------------------------------------------------------------------------------- |
+  | type              | defines the type of index, accepts `UNIQUE`, `FULLTEXT`, `SPATIAL`     |
+  | name            | gives the index a name accepts `string` |
+
+
+### Install your model
+
+After writing your schema you can use the [avanda CLI](/components/avanda-cli/overview) to install the created model to your database 
 
 ```bash
-$ npm i -g esno
+yarn avanda app install <modelName>
 ```
+> For more on models check [here](/guide/model)
 
-#yarn
-
-```bash
-$ yarn global add esno
-```
-
-::
-Once the installation process is complete, you can run the following command at your OS command prompt to start the application listening for inbound HTTP requests:
-
-```bash
-$ npm run dev
-```
->This command will watch your files, automatically recompiling and reloading the server.
-
-This command starts the app with the HTTP server listening on the port defined in the `.env` file. Once the application is running, open your browser and navigate to `http://localhost:4000/`. You should see the `Hello World!` message.
 
