--- a/content/2.components/1.avanda-cli/1.overview.md
+++ b/content/2.components/1.avanda-cli/1.overview.md
@@ -4,7 +4,7 @@
 
 The [Avanda CLI](https://github.com/avandajs/cli) is the cli module of avandajs, it's required to run any avandajs project. It helps in different ways, some includes, creating a new project, serving your project while developing, creaating new folder files, interacting with your database and building your project for production.  
 
-### Installation
+## Installation
 it's recommended to use avanda in project scope, to let yarn run avanda, add avanda to list of commands in your `package.json` file then run:
 
 #### Local Installation
@@ -39,7 +39,7 @@ $ npm install
 > [Learn More About creating a new project](/getting-started/quick-start)
 
 
-### Comands
+## Comands
 
 Once installed, you can execute CLI commands from your command line with the prefix `avanda`. To see the available `avanda` commands check [Here](/components/avanda-cli/guide##commands) or by entering the following:
 
