Response Done, model started, controller done

--- a/content/1.getting-started/2.jump-start.md
+++ b/content/1.getting-started/2.jump-start.md
@@ -27,7 +27,7 @@ export default config
 ```
 
 #### Server Config
-`server.ts`file is available for you to configure your [server](/api/configs/server). Add your client domain to the CORS Whitelist to prevent blocking of requests requests 
+`server.ts`file is available for you to configure your [server](/api/configs/server). Add your client domain to the CORS Whitelist to prevent blocking of requests. 
 
 ```ts
 const config: serverConfig =  {
@@ -186,17 +186,17 @@ import BlogPostModel from "../models/BlogPost"
 export default class Blog extends Controller {
     model?:  BlogPostModel
     @Get()
-    async get(response: Response,request: Request, model?: Model): Promise<any> {
+    async get(res: Response,req: Request, model?: Model): Promise<any> {
         return (await this.model?.first())
     }
 
     @Get()
-    async getAll(response: Response,request: Request, model?: Model) {
+    async getAll(res: Response,req: Request, model?: Model) {
         return (await this.model?.all())
     }
 
     @Get()
-    async getAllByPage(response: Response,request: Request, model?: Model) {
+    async getAllByPage(res: Response,req: Request, model?: Model) {
         let data = await this.model?.page(request.page,true)
         response.totalPages = this.model.totalPages
         response.currentPage = request.page
