--- a/content/2.components/2.avanda-orm/1.getting-started.md
+++ b/content/2.components/2.avanda-orm/1.getting-started.md
@@ -137,6 +137,11 @@ It can also be used to define the floating point of a `decimal` column datatype
 })
 name_of_column_id?: string;
 ```
+- #### onUpdated
+accepts a function, which runs when the column is updated
+
+- #### onDeleted
+accepts a function, which runs when the column is deleted
 
 - #### index
 `index` option is used to define an index on a column in the model,
