--- a/content/guide/2.models.md
+++ b/content/guide/2.models.md
@@ -80,7 +80,7 @@ export default class User extends Controller {
 Model options are methods paired with an instance of a model to query or perform certain actions to the table in the database
 
 ### Operations Options
-These are model options used to perform certain operations on a model
+These are model methods used to perform certain operations on a model
 
 #### .create()
 creates a new row of data in the table in the database, accepts an object where the key is the [column_name](/components/avanda-orm-getting-started#Column) and the value is the value to create
@@ -211,7 +211,130 @@ export default class User extends Model{
 ::
 
 ### delete()
-updates an existing row of data in the table in the database, accepts an object where the key is the [column_name](/components/avanda-orm-getting-started#Column) and the value is the value to update
+deletes an existing row of data in the table in the database
 
+::CodeGroup{toggleText="Usage,Example,Schema"}
+#Usage
+
+
+```ts
+await new Model().find(id)
+
+```
+#Example
+
+```ts
+import {Controller, Request, Response, Get} from "@avanda/http";
+import BlogModel from "../models/Blog"
+
+export default class Blog extends Controller {
+    model?:  BlogModel
+    @Post() //accepts middleware 
+    async controllerFunction(res: Response, req: Request) {
+    const {some_id } = req.data;
+    const blogWithId await new User().find(some_id) // finds the row in the user model with the some_id
+  }
+
+}
+```
+
+#Schema
+
+```ts [models/BlogPost.ts]
+import User from '../models/User';
+import {Column,Model} from "@avanda/orm";
+
+export default class Blog extends Model{
+    id?: number;
+
+    @Column.int({
+        references: new User()
+    })
+    user_id?: number;
+
+    @Column.text()
+    author?:string;
+
+    @Column.text()
+    title?:string;
+
+    @Column.text()
+    content?:string;
+
+    @Column.json({
+        nullable:true
+    })
+    tags?:string[];
+
+    @Column.text({
+        nullable:true
+    })
+    category?:string;
+}
+```
+
+::
+
+## Query Options
+these are the list of methods to query a model
+
+### find
+finds the row with the provided `id`
+
+::CodeGroup{toggleText="Usage,Schema"}
+#Usage
+
+
+```ts
+import {Controller, Request, Response, Get} from "@avanda/http";
+import BlogModel from "../models/Blog"
+
+export default class Blog extends Controller {
+    model?:  BlogModel
+    @Post() //accepts middleware 
+    async createPost(res: Response, req: Request) {
+    const { user_id } = req.data;
+    await new User().where({id: user_id }).delete() // delete the 
+  }
+
+}
+```
+
+#Schema
+
+```ts [models/BlogPost.ts]
+import User from '../models/User';
+import {Column,Model} from "@avanda/orm";
+
+export default class Blog extends Model{
+    id?: number;
+
+    @Column.int({
+        references: new User()
+    })
+    user_id?: number;
+
+    @Column.text()
+    author?:string;
+
+    @Column.text()
+    title?:string;
+
+    @Column.text()
+    content?:string;
+
+    @Column.json({
+        nullable:true
+    })
+    tags?:string[];
+
+    @Column.text({
+        nullable:true
+    })
+    category?:string;
+}
+```
+
+::
 
 
