ADDed Loading bar and created index page

--- a/content/2.components/1.avanda-cli/1.overview.md
+++ b/content/2.components/1.avanda-cli/1.overview.md
@@ -2,10 +2,10 @@
 
 # CLI Overview
 
-The [Avanda CLI](https://github.com/avandajs/cli) is the cli module of avandajs, it's required to run any avandajs project. It helps in different ways, some includes, creating a new project, serving your project while developing, creaating new folder files, interacting with your database and building your project for production.  
+The [Avanda CLI](https://github.com/avandajs/cli) is the cli module of avandajs, it is required to run any avandajs project. It helps in different ways, creating a new project, serving your project while developing, creaating new folder files, interacting with your database and building your project for production.  
 
 ## Installation
-it's recommended to use avanda in project scope, to let yarn run avanda, add avanda to list of commands in your `package.json` file then run:
+it is recommended to use avanda in project scope, to let yarn run avanda, add avanda to list of commands in your `package.json` file then run:
 
 #### Local Installation
 For project scope
@@ -15,7 +15,7 @@ For project scope
 $ yarn avanda
 ```
 #### Global Scope
-When avanda cli is [installed globally](/getting-started/quick-start#setup), you don't need to add it to your, you can just run:
+When avanda cli is [installed globally](/getting-started/quick-start#setup), you don't need to add it to the `package.json`, you can just run:
 
 
 ```bash
