--- a/content/2.components/1.avanda-cli/2.guide.md
+++ b/content/2.components/1.avanda-cli/2.guide.md
@@ -5,7 +5,7 @@ Here are some guides for running commands with Avanda CLI:
 
 Here are the list of some basic commands 
 
-> Don't know what file-types, actions are? Check [Command Arguments](#command-arguments) 
+> Don't know what asset-types, actions are? Check [Command Arguments](#command-arguments) 
 
 | Command    | Description                                                                                           | Usage |
 | ---------- | ----------------------------------------------------------------------------------------------------- | ------- |
@@ -18,9 +18,10 @@ Here are the list of some basic commands
 <!-- ### CLI commands  -->
 <!-- Cli options are list of options you can tag along with your command to give more intructions to the commands -->
 
-###Command Arguments
+### Command Arguments
 
-CLI commands accepts some arguments you can tag along to give more intructions to the commands
+CLI commands accepts some arguments you can tag along to give more intructions to the commands.
+Comand Arguments are broken into two parts which are options and Actions
 
 Here are some of the command arguments available:
 
